consulta de reclamacao: corrige overflow do texto na celula

--- a/src/components/screens/Produto/ResponderReclamacao/style.scss
+++ b/src/components/screens/Produto/ResponderReclamacao/style.scss
@@ -34,12 +34,19 @@
     font-weight: bold;
     padding-left: 1rem;
     line-height: 48px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .table-body {
     position: relative;
     font-weight: 500;
     color: #686868;
+
+    div:nth-last-child(2) {
+      padding-right: 2rem;
+    }
 
     .reclamacao-collapse {
       position: absolute;
@@ -55,6 +62,9 @@
     text-align: left;
     padding-left: 1rem;
     line-height: 48px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .desativar-borda {
