validação formulario modal

--- a/src/components/screens/Produto/BuscaProdutoAnaliseSensorial/components/ModalResponderAnaliseSensorial/styles.scss
+++ b/src/components/screens/Produto/BuscaProdutoAnaliseSensorial/components/ModalResponderAnaliseSensorial/styles.scss
@@ -37,3 +37,16 @@ article {
     margin-left: 1em;
   }
 }
+
+.campo-hora {
+  .ant-form-explain {
+    color: #a50e05;
+    font-size: 12px !important;
+  }
+}
+
+.ant-form-explain {
+  color: #a50e05 !important;
+  margin-top: 5px;
+  font-size: 12px !important;
+}
