adicionando card informativo de reclamação nos relatorios

--- a/src/components/screens/Produto/AtualizacaoProdutoForm/components/styles.scss
+++ b/src/components/screens/Produto/AtualizacaoProdutoForm/components/styles.scss
@@ -134,6 +134,7 @@ div.cadastro-produto-step3 {
   justify-content: flex-end;
   align-items: center;
   margin: 60px 0 0 0;
+  padding: 60px 0 0 0;
 }
 
 .segundo-formulario {
