incluir informacao de recusa da homologacao no relatorio de produto

--- a/src/components/Shareable/MotivoDaRecusaDeHomologacao/styles.scss
+++ b/src/components/Shareable/MotivoDaRecusaDeHomologacao/styles.scss
@@ -3,12 +3,12 @@
 .componente-motivo-da-recusa-de-homologacao {
   color: #42474a;
 
-  .titulo {
+  .titulo-recusa {
     margin-top: 20px;
     font-size: 14px;
   }
 
-  .texto-wysiwyg {
+  .texto-wysiwyg-recusa {
     border: 1px #dddddd solid !important;
     padding: 0.5rem;
     font-size: 12px;
