Finaliza formulário e relatório

--- a/src/components/screens/Produto/RelatorioQuantitativoPorTerceirizada/style.scss
+++ b/src/components/screens/Produto/RelatorioQuantitativoPorTerceirizada/style.scss
@@ -9,6 +9,13 @@
     color: #42474a;
     margin-bottom: 20px;
   }
+  .datepicker-fixed-padding {
+    color: #42474a !important;
+    padding: 2px !important;
+  }
+  .col-botoes {
+    padding-right: 1.15em;
+  }
 }
 
 .tabela-quantitativo-por-terceirizada {
