alteração do input de imagens

--- a/src/components/screens/Produto/Cadastro/Step3/style.scss
+++ b/src/components/screens/Produto/Cadastro/Step3/style.scss
@@ -35,3 +35,21 @@ div.cadastro-produto-step3 {
     }
   }
 }
+
+.attachments {
+  .text {
+    font-size: 14px;
+    color: #686868;
+  }
+  .card-warning {
+    border: 1px solid $red;
+    color: $red;
+    font-size: 10px;
+    padding: 10px;
+  }
+  .btn {
+    display: flex;
+    margin-top: 2em;
+    justify-content: flex-end;
+  }
+}
