--- a/src/components/screens/Produto/Reclamacao/components/TabelaProdutos/style.scss
+++ b/src/components/screens/Produto/Reclamacao/components/TabelaProdutos/style.scss
@@ -2,9 +2,13 @@
   border-radius: 4px;
   border: 0.5px solid #f0f0f0;
 
+  hr {
+    width: 98%;
+  }
+
   .tabela-produto {
     display: grid;
-    grid-template-columns: 32% 17% 21% 13% 16%;
+    grid-template-columns: 36% 16% 16% 16% 16%;
   }
 
   .tabela-header-produto {
