Revisando conforme feedback QA

--- a/src/components/screens/Produto/Reclamacao/style.scss
+++ b/src/components/screens/Produto/Reclamacao/style.scss
@@ -7,4 +7,10 @@
     color: #42474a;
     margin-bottom: 20px;
   }
+  .label-resultados-busca {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    color: #42474a;
+  }
 }
