--- a/src/components/screens/Produto/BuscaProdutoSuspensos/styles.scss
+++ b/src/components/screens/Produto/BuscaProdutoSuspensos/styles.scss
@@ -29,6 +29,10 @@
   justify-content: flex-end;
 }
 
+.margin-da-pagina {
+  margin-bottom: 15em;
+}
+
 .body-modal {
   margin: 1em 2em;
 
@@ -122,4 +126,11 @@
       }
     }
   }
+}
+
+.input-data-sem-label {
+  display: flex;
+  align-items: center;
+  // margin: 0.5em 1em 0 0;
+  // justify-content: flex-end;
 }
