--- a/src/components/screens/Produto/ResponderReclamacao/style.scss
+++ b/src/components/screens/Produto/ResponderReclamacao/style.scss
@@ -11,9 +11,8 @@
   border-bottom: 1px solid #e9eaea;
 
   .table-grid {
-    height: 48px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 36% 16% 16% 16% 16%;
   }
 
   .table-header {
