Cria relatório de situação de produto

--- a/src/components/Shareable/DatePicker/style.scss
+++ b/src/components/Shareable/DatePicker/style.scss
@@ -20,6 +20,7 @@ div.datepicker {
     position: relative;
   }
   div.react-datepicker-wrapper {
+    width: 100%;
     margin-right: -30px;
     .react-datepicker__input-container {
       input {
