Ajuste de estilo e texto

--- a/src/components/screens/Produto/RelatorioSituacaoProduto/components/TabelaSituacaoProduto/style.scss
+++ b/src/components/screens/Produto/RelatorioSituacaoProduto/components/TabelaSituacaoProduto/style.scss
@@ -68,7 +68,7 @@
 
   .row-situacao-status {
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: 33% 33% 33%;
     height: 68px;
 
     .status-flex-container {
