--- a/src/components/screens/Produto/BuscaAvancada/components/FormBuscaProduto/style.scss
+++ b/src/components/screens/Produto/BuscaAvancada/components/FormBuscaProduto/style.scss
@@ -1,4 +1,4 @@
-.busca-produtos-ativacao {
+.busca-produtos {
   display: grid;
 
   .header-busca-produto {
@@ -147,18 +147,6 @@
   }
 }
 
-.inputs-com-data {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-
-  label {
-    padding-bottom: 0.5em !important;
-  }
-
-  .input-data-sem-label {
-    display: flex;
-    align-items: center;
-    margin: 0.5em 1em 0 0;
-    justify-content: flex-end;
-  }
+.react-datepicker-popper {
+  z-index: 9999 !important;
 }
