--- a/src/components/screens/Produto/Reclamacao/style.scss
+++ b/src/components/screens/Produto/Reclamacao/style.scss
@@ -13,4 +13,12 @@
     font-size: 14px;
     color: #42474a;
   }
+
+  .anticon {
+    vertical-align: 0.25em;
+  }
+
+  .ant-pagination {
+    margin-top: 2em;
+  }
 }
