Formulario OK, retornando dados

--- a/src/components/Shareable/DatePicker/style.scss
+++ b/src/components/Shareable/DatePicker/style.scss
@@ -34,6 +34,60 @@ div.datepicker {
       }
     }
   }
+  .input-group {
+    &.calendar {
+      input {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+      }
+      display: -webkit-inline-box;
+      .input-group-prepend {
+        align-items: flex-end;
+        .input-group-text {
+          display: block;
+          text-align: center;
+          min-width: 140px;
+        }
+      }
+    }
+    &.active-calendar {
+      display: -webkit-inline-box;
+      i {
+        color: #2881bb;
+      }
+      input {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        border: none;
+      }
+      .input-group-prepend {
+        @media only screen and (max-width: 1650px) {
+          margin-top: 1px;
+        }
+        .input-group-text {
+          display: block;
+          min-width: 140px;
+          text-align: center;
+          background: #e4f1ff;
+          border: 1px solid #2881bb;
+          color: #2881bb;
+        }
+      }
+      .react-datepicker__input-container {
+        background: #e4f1ff;
+        border: 1px solid #2881bb;
+        color: #2881bb;
+        border-top-right-radius: 6px;
+        border-bottom-right-radius: 6px;
+        .form-control {
+          color: #2881bb;
+        }
+      }
+    }
+  }
+  .col-form-label {
+    font-size: 14px;
+  }
 }
 
 .inversao-datepicker {
@@ -48,54 +102,4 @@ div.datepicker {
   }
 }
 
-.input-group {
-  &.calendar {
-    input {
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-    }
-    display: -webkit-inline-box;
-    .input-group-prepend {
-      align-items: flex-end;
-      .input-group-text {
-        display: block;
-        text-align: center;
-        min-width: 140px;
-      }
-    }
-  }
-  &.active-calendar {
-    display: -webkit-inline-box;
-    i {
-      color: #2881bb;
-    }
-    input {
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-      border: none;
-    }
-    .input-group-prepend {
-      @media only screen and (max-width: 1650px) {
-        margin-top: 1px;
-      }
-      .input-group-text {
-        display: block;
-        min-width: 140px;
-        text-align: center;
-        background: #e4f1ff;
-        border: 1px solid #2881bb;
-        color: #2881bb;
-      }
-    }
-    .react-datepicker__input-container {
-      background: #e4f1ff;
-      border: 1px solid #2881bb;
-      color: #2881bb;
-      border-top-right-radius: 6px;
-      border-bottom-right-radius: 6px;
-      .form-control {
-        color: #2881bb;
-      }
-    }
-  }
-}
+
