--- a/src/components/screens/DietaEspecial/AtivasInativasPorAluno/FormFiltros.scss
+++ b/src/components/screens/DietaEspecial/AtivasInativasPorAluno/FormFiltros.scss
@@ -1,8 +1,10 @@
-button,
-[type="submit"] {
-  margin-bottom: 0.5em;
-}
-.botao-enviar {
-  display: flex;
-  align-items: flex-end;
+.form-filtros-ativas-inativas {
+  .botao-enviar > button,
+  [type="submit"] {
+    margin-bottom: 0.5em;
+  }
+  .botao-enviar {
+    display: flex;
+    align-items: flex-end;
+  }
 }
