--- a/src/components/screens/DietaEspecial/RelatorioQuantitativoSolicDietaEsp/components/FormFiltros/styles.scss
+++ b/src/components/screens/DietaEspecial/RelatorioQuantitativoSolicDietaEsp/components/FormFiltros/styles.scss
@@ -1,8 +1,5 @@
 .form-filtros-rel-quant-solic-dieta-esp {
   .botoes-envio {
-    display: flex;
-    align-items: flex-end;
-    padding-bottom: 5px;
-    justify-content: flex-end;
+    padding-top: 35px;
   }
 }
