Correções após testes pt 2

--- a/src/components/screens/DietaEspecial/RelatorioQuantitativoDiagDietaEsp/components/FormFiltros/styles.scss
+++ b/src/components/screens/DietaEspecial/RelatorioQuantitativoDiagDietaEsp/components/FormFiltros/styles.scss
@@ -1,9 +1,5 @@
 .form-filtros-rel-quant-diag-dieta-esp {
   .botoes-envio {
-    display: flex;
-    align-items: flex-end;
-    padding-bottom: 5px;
-    justify-content: flex-end;
-    margin-top: 1em;
+    padding-top: 35px;
   }
 }
