Correcoes apos testes pt 3

--- a/src/components/screens/DietaEspecial/RelatorioQuantitativoDiagDietaEsp/components/FormFiltros/styles.scss
+++ b/src/components/screens/DietaEspecial/RelatorioQuantitativoDiagDietaEsp/components/FormFiltros/styles.scss
@@ -1,5 +1,7 @@
 .form-filtros-rel-quant-diag-dieta-esp {
   .botoes-envio {
     padding-top: 35px;
+    display: flex;
+    justify-content: flex-end;
   }
 }
