--- a/src/components/screens/DietaEspecial/RelatorioQuantitativoSolicDietaEsp/components/TabelaRelatorio/styles.scss
+++ b/src/components/screens/DietaEspecial/RelatorioQuantitativoSolicDietaEsp/components/TabelaRelatorio/styles.scss
@@ -3,12 +3,16 @@
     grid-template-columns: 40% 30% 10% 10% 10%;
   }
 
+  .grid-nutri-sem-escola {
+    grid-template-columns: 55% 15% 15% 15%;
+  }
+
   .grid-dre-todos {
     grid-template-columns: 50% 16.66% 16.66% 16.67%;
   }
 
   .grid-escola-todos {
-    grid-template-columns: 33.33% 33.33% 33.34%;
+    grid-template-columns: 40% 30% 10% 10% 10%;
   }
 
   .grid-nutri-unico {
