Aplica mudanças do relatório de solicitação no relatório de diagnóstico

--- a/src/components/screens/DietaEspecial/RelatorioQuantitativoDiagDietaEsp/components/TabelaRelatorio/styles.scss
+++ b/src/components/screens/DietaEspecial/RelatorioQuantitativoDiagDietaEsp/components/TabelaRelatorio/styles.scss
@@ -3,12 +3,16 @@
     grid-template-columns: 20% 15% 18% 10% 15% 10% 12%;
   }
 
+  .grid-nutri-sem-escola {
+    grid-template-columns: 35% 25% 10% 12% 9% 9%;
+  }
+
   .grid-dre-todos {
     grid-template-columns: 25% 20% 15% 15% 15% 10%;
   }
 
   .grid-escola-todos {
-    grid-template-columns: 30% 17.5% 17.5% 17.5% 17.5%;
+    grid-template-columns: 20% 15% 18% 10% 15% 10% 12%;
   }
 
   .grid-nutri-unico {
