--- a/src/components/screens/DietaEspecial/RelatorioQuantitativoDiagDietaEsp/components/TabelaRelatorio/styles.scss
+++ b/src/components/screens/DietaEspecial/RelatorioQuantitativoDiagDietaEsp/components/TabelaRelatorio/styles.scss
@@ -3,28 +3,40 @@
     grid-template-columns: 20% 15% 18% 10% 15% 10% 12%;
   }
 
-  .grid-nutri-sem-escola {
+  .grid-nutri-todos-sem-escola {
     grid-template-columns: 35% 25% 10% 12% 9% 9%;
-  }
-
-  .grid-dre-todos {
-    grid-template-columns: 25% 20% 15% 15% 15% 10%;
-  }
-
-  .grid-escola-todos {
-    grid-template-columns: 20% 15% 18% 10% 15% 10% 12%;
   }
 
   .grid-nutri-unico {
     grid-template-columns: 30% 27.5% 17.5% 10% 15%;
   }
 
+  .grid-nutri-unico-sem-escola {
+    grid-template-columns: 30% 27.5% 17.5% 10% 15%;
+  }
+
+  .grid-dre-todos {
+    grid-template-columns: 25% 20% 15% 15% 15% 10%;
+  }
+
+  .grid-dre-todos-sem-escola {
+    grid-template-columns: 50% 14% 12% 12% 12%;
+  }
+
   .grid-dre-unico {
     grid-template-columns: 40% 30% 15% 15%;
   }
 
+  .grid-dre-unico-sem-escola {
+    grid-template-columns: 70% 15% 15%;
+  }
+
+  .grid-escola-todos {
+    grid-template-columns: 20% 15% 18% 10% 15% 10% 12%;
+  }
+
   .grid-escola-unico {
-    grid-template-columns: 60% 20% 20%;
+    grid-template-columns: 36% 30% 16% 10% 8%;
   }
 
   .row-quantitativo-card {
