Completa visual da tela

--- a/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/PanoramaGeral/styles.scss
+++ b/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/PanoramaGeral/styles.scss
@@ -10,7 +10,7 @@
       align-items: center;
       font-size: 12px;
       color: $blackSubtle;
-      background-color: #d1d1d1;
+      background-color: #f5f6f8;
       border: 1px solid #e9eaea;
       font-weight: 700;
       padding: 1em;
@@ -51,7 +51,7 @@
       align-items: center;
       font-size: 12px;
       color: $blackSubtle;
-      background-color: #d1d1d1;
+      background-color: #f5f6f8;
       border: 1px solid #e9eaea;
       font-weight: 700;
       padding: 1em;
