Correções após testes

--- a/src/components/Shareable/MultiSelect/style.scss
+++ b/src/components/Shareable/MultiSelect/style.scss
@@ -12,3 +12,10 @@ div.multi-select {
     color: #5d515b !important;
   }
 }
+label.select-item {
+  white-space: nowrap;
+}
+
+body {
+  background-color: yellow;
+}
