Aplica melhoria no relatório de reclamação de produtos

--- a/src/components/screens/Produto/RelatorioReclamacaoProduto/components/ModalRelatorioReclamacao/styles.scss
+++ b/src/components/screens/Produto/RelatorioReclamacaoProduto/components/ModalRelatorioReclamacao/styles.scss
@@ -24,7 +24,7 @@
       }
       .item-grid-produto {
         display: grid;
-        grid-template-columns: 1.9fr 1.6fr 1.6fr 1fr 1fr;
+        grid-template-columns: 1.7fr 1.3fr 1fr 1fr 0.9fr 1.3fr;
         height: 48px;
 
         div {
