--- a/src/components/screens/DietaEspecial/RelatorioQuantitativoDiagDietaEsp/components/TabelaRelatorio/styles.scss
+++ b/src/components/screens/DietaEspecial/RelatorioQuantitativoDiagDietaEsp/components/TabelaRelatorio/styles.scss
@@ -12,7 +12,7 @@
   }
 
   .grid-nutri-unico-sem-escola {
-    grid-template-columns: 30% 27.5% 17.5% 10% 15%;
+    grid-template-columns: 55% 15% 15% 15%;
   }
 
   .grid-dre-todos {
