--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,15 +14,18 @@ $blueToastInfo: #0c5460;
 $bordeaux: #864241;
 $gray: #686868;
 $grayBackground: #fafafa;
+$grayBorder: #e9eaea;
 $grayCard: #eeeeee;
 $grayDisabled: #dadada;
 $grayHeader: #929394;
+$grayLightHeader: #f5f6f8;
 $grayIcon: #c2cfe0;
 $grayInputBackground: #e8e8e8;
 $grayLight: #a8a8a8;
 $grayPlaceholder: #a4a4a4;
 $green: #198459;
 $greenBackgroundToastSuccess: #d4edda;
+$greenBackgroundTable: #acd2b1;
 $greenButtonHover: #0c6b45;
 $greenHover: #00c855;
 $greenPanel: #297805;
