--- a/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/LancamentoPorPeriodo/CardLancamento/TabelaLancamento/styles.scss
+++ b/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/LancamentoPorPeriodo/CardLancamento/TabelaLancamento/styles.scss
@@ -25,18 +25,22 @@
     min-height: 50px;
     border-radius: 4px 4px 0px 0px;
     > div {
-      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
       font-size: 12px;
       color: $blackSubtle;
       border: 1px solid $grayBorder;
       font-weight: 700;
-      padding: 1em;
     }
     > div:nth-child(1) {
       border-radius: 0px 0px 0px 4px;
     }
     > div:nth-last-child(1) {
       border-radius: 0px 0px 4px 0px;
+    }
+    input {
+      min-height: 50px;
     }
   }
 }
