Adiciona primeira validaçao, erro no rodape e estilo em caso de erro

--- a/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/BorderlessInput/styles.scss
+++ b/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/BorderlessInput/styles.scss
@@ -10,4 +10,10 @@
     font-size: 12px;
     text-align: center;
   }
+  input:disabled {
+    background: #ccc;
+  }
+  &.borderless-input-error input {
+    border: 2px solid red;
+  }
 }
