--- a/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/LancamentoPorPeriodo/CardLancamento/styles.scss
+++ b/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/LancamentoPorPeriodo/CardLancamento/styles.scss
@@ -64,4 +64,11 @@
       color: red;
     }
   }
+  .botoes-envio {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .erros-formulario {
+    color: red;
+  }
 }
