Relatório quantitativo por classificação da dieta especial versão impressa. feature 22091

--- a/src/components/screens/DietaEspecial/RelatorioQuantitativoClassificacaoDietaEsp/components/TabelaRelatorio/styles.scss
+++ b/src/components/screens/DietaEspecial/RelatorioQuantitativoClassificacaoDietaEsp/components/TabelaRelatorio/styles.scss
@@ -1,6 +1,6 @@
-.tabela-relatorio-quant-diag-dieta-esp {
+.tabela-relatorio-quant-classificacao-dieta-esp {
   .grid-nutri-todos {
-    grid-template-columns: 20% 15% 18% 10% 15% 10% 12%;
+    grid-template-columns: 32% 15% 18% 10% 15% 10%;
   }
 
   .grid-nutri-todos-sem-escola {
@@ -32,7 +32,7 @@
   }
 
   .grid-escola-todos {
-    grid-template-columns: 20% 15% 18% 10% 15% 10% 12%;
+    grid-template-columns: 32% 15% 18% 10% 15% 10%;
   }
 
   .grid-escola-unico {
