--- a/src/components/screens/Produto/BuscaAvancada/components/RelatorioProduto/components/styles.scss
+++ b/src/components/screens/Produto/BuscaAvancada/components/RelatorioProduto/components/styles.scss
@@ -325,7 +325,7 @@
       background: #f3f3f3;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
       border-radius: 4px;
-      height: 50px;
+      height: max-content;
       margin: 10px 5px;
       color: #5a5a5a;
 
