Esconde lançamento de dieta quando a escola não tem dietas ativas

--- a/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/LancamentoPorPeriodo/CardLancamento/TabelaLancamento/styles.scss
+++ b/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/LancamentoPorPeriodo/CardLancamento/TabelaLancamento/styles.scss
@@ -108,8 +108,9 @@
   .cabecalho-tabela,
   .linha-tabela {
     display: flex;
+    display: flex;
     > div {
-      min-width: 70px;
+      width: 70px;
     }
     > div:nth-last-child(1) {
       justify-content: flex-start;
