--- a/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/LancamentoPorPeriodo/CardLancamento/TabelaLancamento/styles.scss
+++ b/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/LancamentoPorPeriodo/CardLancamento/TabelaLancamento/styles.scss
@@ -111,6 +111,7 @@
     display: flex;
     > div {
       width: 70px;
+      min-width: 70px;
     }
     > div:nth-last-child(1) {
       justify-content: flex-start;
