--- a/src/components/screens/DietaEspecial/RelatorioQuantitativoClassificacaoDietaEsp/components/TabelaRelatorio/styles.scss
+++ b/src/components/screens/DietaEspecial/RelatorioQuantitativoClassificacaoDietaEsp/components/TabelaRelatorio/styles.scss
@@ -1,10 +1,10 @@
 .tabela-relatorio-quant-classificacao-dieta-esp {
   .grid-nutri-todos {
-    grid-template-columns: 32% 15% 18% 10% 15% 10%;
+    grid-template-columns: 29% 20% 15% 12% 12% 12%;
   }
 
   .grid-nutri-todos-sem-escola {
-    grid-template-columns: 35% 25% 10% 12% 9% 9%;
+    grid-template-columns: 35% 20% 15% 15% 15%;
   }
 
   .grid-nutri-unico {
@@ -16,11 +16,11 @@
   }
 
   .grid-dre-todos {
-    grid-template-columns: 32% 20% 15% 15% 15% 10%;
+    grid-template-columns: 35% 20% 15% 15% 15%;
   }
 
   .grid-dre-todos-sem-escola {
-    grid-template-columns: 50% 14% 12% 12% 12%;
+    grid-template-columns: 55% 15% 15% 15%;
   }
 
   .grid-dre-unico {
@@ -111,4 +111,8 @@
       border-bottom: 1px solid #e9eaea;
     }
   }
+}
+.center-items {
+  text-align: center;
+  justify-content: center;
 }
