--- a/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/LancamentoPorPeriodo/CardLancamento/TabelaLancamento/styles.scss
+++ b/src/components/screens/LancamentoInicial/LancamentoMedicaoInicial/components/LancamentoPorPeriodo/CardLancamento/TabelaLancamento/styles.scss
@@ -108,7 +108,6 @@
   .cabecalho-tabela,
   .linha-tabela {
     display: flex;
-    display: flex;
     > div {
       width: 70px;
       min-width: 70px;
@@ -149,4 +148,39 @@
     display: flex;
     align-items: center;
   }
+}
+
+.tabela-totais-pagamento {
+  .linha-tabela {
+    display: grid;
+    grid-template-columns: 60% 40%;
+    > div:nth-child(1) {
+      background-color: $grayLightHeader;
+    }
+  }
+}
+
+.cabecalho-lancamentos-por-mes {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  border: 1px solid #e9eaea;
+  box-sizing: border-box;
+  border-radius: 4px;
+  height: 50px;
+  background-color: $greenBackgroundTable;
+  color: $blackSubtle;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  > div:nth-child(1) {
+    font-weight: bold;
+  }
+  > div:nth-last-child(1) {
+    cursor: pointer;
+  }
+}
+
+.linha-tabela-fds-feriado > div {
+  background-color: #cee5c0;
 }
