Aplica correções no relatório de produtos por tercerizadas

--- a/src/components/screens/Produto/RelatorioQuantitativoPorTerceirizada/style.scss
+++ b/src/components/screens/Produto/RelatorioQuantitativoPorTerceirizada/style.scss
@@ -1,7 +1,7 @@
 @import "styles/variables.scss";
 
 .page-relatorio-quantitativo-por-terceirizada {
-  min-height: 400px;
+  margin-bottom: 15em !important;
   .header-busca-produto {
     font-style: normal;
     font-weight: bold;
