bug: Dieta Relatório quantitativo por classificação da dieta especial. bug 26251-26832

--- a/src/components/screens/DietaEspecial/RelatorioQuantitativoClassificacaoDietaEsp/components/TabelaRelatorio/styles.scss
+++ b/src/components/screens/DietaEspecial/RelatorioQuantitativoClassificacaoDietaEsp/components/TabelaRelatorio/styles.scss
@@ -8,11 +8,11 @@
   }
 
   .grid-nutri-unico {
-    grid-template-columns: 30% 27.5% 17.5% 10% 15%;
+    grid-template-columns: 32.5% 32.5% 20% 15%;
   }
 
   .grid-nutri-unico-sem-escola {
-    grid-template-columns: 55% 15% 15% 15%;
+    grid-template-columns: 60% 25% 15%;
   }
 
   .grid-dre-todos {
@@ -24,11 +24,11 @@
   }
 
   .grid-dre-unico {
-    grid-template-columns: 40% 30% 15% 15%;
+    grid-template-columns: 70% 15% 15%;
   }
 
   .grid-dre-unico-sem-escola {
-    grid-template-columns: 70% 15% 15%;
+    grid-template-columns: 85% 15%;
   }
 
   .grid-escola-todos {
@@ -36,7 +36,7 @@
   }
 
   .grid-escola-unico {
-    grid-template-columns: 36% 30% 16% 10% 8%;
+    grid-template-columns: 55% 15% 15% 15%;
   }
 
   .row-quantitativo-card {
