feature: Visualizar na ficha de identificação do produto a solicitação da análise sensorial. feature 27637-27726

--- a/src/components/screens/Produto/RelatorioAnaliseSensorial/styles.scss
+++ b/src/components/screens/Produto/RelatorioAnaliseSensorial/styles.scss
@@ -30,6 +30,11 @@
   padding-left: 0;
 }
 
+.a-flex {
+  display: flex;
+  align-items: flex-end;
+}
+
 .aviso-importante {
   height: 45px;
   border-radius: 4px;
